// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser: Should drop index with algorithm option. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_DROP_INDEX",
        "def": {
          "index": "i_oid",
          "table": "people",
          "options": [
            {
              "id": "P_INDEX_ALGORITHM_OPTION",
              "def": {
                "algorithm": "default"
              }
            },
            {
              "id": "P_LOCK_OPTION",
              "def": {
                "lock": "none"
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should drop index with algorithm option. 2`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_DROP_INDEX",
        "def": {
          "index": "i_oid",
          "table": "people",
          "options": [
            {
              "id": "P_INDEX_ALGORITHM_OPTION",
              "def": {
                "algorithm": "default"
              }
            },
            {
              "id": "P_LOCK_OPTION",
              "def": {
                "lock": "none"
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should drop index with algorithm option. 3`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_DROP_INDEX",
        "def": {
          "index": "i_oid",
          "table": "people",
          "options": [
            {
              "id": "P_INDEX_ALGORITHM_OPTION",
              "def": {
                "algorithm": "default"
              }
            },
            {
              "id": "P_LOCK_OPTION",
              "def": {
                "lock": "none"
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should drop index with lock option 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_DROP_INDEX",
        "def": {
          "index": "i_oid",
          "table": "people",
          "options": [
            {
              "id": "P_LOCK_OPTION",
              "def": {
                "lock": "default"
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should drop index with lock option 2`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_DROP_INDEX",
        "def": {
          "index": "i_oid",
          "table": "people",
          "options": [
            {
              "id": "P_LOCK_OPTION",
              "def": {
                "lock": "default"
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should drop index with lock option 3`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_DROP_INDEX",
        "def": {
          "index": "i_oid",
          "table": "people",
          "options": [
            {
              "id": "P_LOCK_OPTION",
              "def": {
                "lock": "default"
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should drop index. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_DROP_INDEX",
        "def": {
          "index": "i_oid",
          "table": "people",
          "options": []
        }
      }
    }
  ]
}
`;
